--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<ul class="icons">
 						<li><a href="https://github.com/abhilashchaparala" target="__blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/abhilash-chaparala/" target="__blank"class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="mailto: ch.abi8686@gmail.com" target="__blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto: abhilashchaparala81@gmail.com" target="__blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					
 				</div>
